Fixed some spacing issue and added logo and favicon

--- a/app/components/Header.css
+++ b/app/components/Header.css
@@ -1,56 +1,57 @@
 li,
 a,
 button {
-    font-weight: 500;
-    color: #000;
-    text-decoration: none;
+  font-weight: 500;
+  color: #000;
+  text-decoration: none;
 }
 
 header {
-    display: flex;
-    align-items: center;
-    padding: 37px 50px;
+  display: flex;
+  align-items: center;
+  padding: 37px 0px;
+  margin: 0 auto;
+  width: 1362px;
 }
 
 .logo {
-    cursor: pointer;
-    margin-right: auto;
-
+  cursor: pointer;
+  margin-right: auto;
 }
 
 .logo img {
-    height: 33px;
+  height: 33px;
 }
 
 .nav-link {
-    list-style: none;
+  list-style: none;
 }
 
 .nav-link li {
-    display: inline-block;
-    padding: 0 14px;
+  display: inline-block;
+  padding: 0 14px;
 }
 
 .nav-link li a {
-    transition: all 0.3s ease 0;
-    font-size: 24px;
-    font-weight: 300;
+  transition: all 0.3s ease 0;
+  font-size: 24px;
+  font-weight: 300;
 }
 
 .nav-link li a:hover {
-    color: #0088a9;
+  color: #0088a9;
 }
 
 button {
-    margin-left: 20px;
-    padding: 9px 25px;
-    background-color: rgba(0, 136, 169, 1);
-    border: none;
-    border-radius: 50px;
-    transition: all 0.3s ease 0;
-    cursor: pointer;
+  margin-left: 20px;
+  padding: 9px 25px;
+  background-color: rgba(0, 136, 169, 1);
+  border: none;
+  border-radius: 50px;
+  transition: all 0.3s ease 0;
+  cursor: pointer;
 }
 
 button:hover {
-    background-color: rgba(0, 136, 169, 0.9);
+  background-color: rgba(0, 136, 169, 0.9);
 }
