--- a/app/resume/resume.css
+++ b/app/resume/resume.css
@@ -1,97 +1,141 @@
 #resume .container {
-    margin: 0 auto;
-    width: 1284px;
+  margin: 0 auto;
+  width: 1284px;
 }
 
 #resume .container .heading h2 {
-    border-bottom: 2px solid #000;
-    font-size: 45px;
-    padding-bottom: 27px;
-    font-weight: 300;
+  border-bottom: 2px solid #000;
+  font-size: 45px;
+  padding-bottom: 27px;
+  font-weight: 300;
 }
 
 #resume .container .bio {
-    text-align: center;
-    margin: 30px 0;
+  text-align: center;
+  margin: 30px 0;
 }
 
 #resume .container .bio h3 {
-    font-size: 30px;
-    font-weight: 400;
-    margin-bottom: 10px;
-    text-transform: uppercase;
+  font-size: 30px;
+  font-weight: 400;
+  margin-bottom: 10px;
+  text-transform: uppercase;
 }
 
 #resume .container .bio .links a {
-    font-size: 20px;
-    font-weight: 300;
-    margin-bottom: 10px;
-    text-decoration: underline;
-    border-right: 2px solid black;
-    padding: 0 10px;
+  font-size: 20px;
+  font-weight: 300;
+  margin-bottom: 10px;
+  text-decoration: underline;
+  border-right: 2px solid black;
+  padding: 0 10px;
 }
 
 #resume .container .bio .links a:last-child {
-    border: none;
+  border: none;
 }
 
-
 #resume .container .work .heading h4 {
-    border-bottom: 2px solid #000;
-    font-size: 30px;
-    padding-bottom: 10px;
-    font-weight: 300;
+  border-bottom: 2px solid #000;
+  font-size: 30px;
+  padding-bottom: 10px;
+  font-weight: 300;
 }
 
 #resume .container .work .work-box {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 #resume .container .work .work-box .company-time {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 #resume .container .work .work-box .company-time h5 {
-    font-size: 25px;
-    font-weight: 300;
+  font-size: 25px;
+  font-weight: 300;
 }
 
 #resume .container .work .work-box .role-location {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 #resume .container .work .work-box .role-location h6 {
-    font-size: 20px;
-    padding-bottom: 10px;
-    font-weight: 300;
+  font-size: 20px;
+  padding-bottom: 10px;
+  font-weight: 300;
 }
 
 #resume .container .work .work-box .responsibility ul {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 
 #resume .container .work .work-box .responsibility ul li {
-    padding-bottom: 5px;
-    font-weight: 200;
+  padding-bottom: 5px;
+  font-weight: 200;
 }
 
 #resume .container .skills .heading h4 {
-    border-bottom: 2px solid #000;
-    font-size: 30px;
-    padding-bottom: 10px;
-    font-weight: 300;
-    margin: 20px 0;
+  border-bottom: 2px solid #000;
+  font-size: 30px;
+  padding-bottom: 10px;
+  font-weight: 300;
+  margin: 20px 0;
 }
 
 #resume .container .skills .skill-box p {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 #resume .container .skills .skill-box p span {
-    font-weight: 200;
-    padding-left: 5px;
+  font-weight: 200;
+  padding-left: 5px;
+}
+#resume .container .education {
+  padding: 20px 0;
+}
+#resume .container .education .heading h4 {
+  border-bottom: 2px solid #000;
+  font-size: 30px;
+  padding-bottom: 10px;
+  font-weight: 300;
+}
+
+#resume .container .education .education-box {
+  margin-top: 20px;
+}
+
+#resume .container .education .education-box .institute-time {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+#resume .container .education .education-box .institute-time h5 {
+  font-size: 25px;
+  font-weight: 300;
+}
+
+#resume .container .education .education-box .course-location {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+#resume .container .education .education-box .course-location h6 {
+  font-size: 20px;
+  padding-bottom: 10px;
+  font-weight: 300;
+}
+
+#resume .container .education .education-box .activities ul {
+  padding-left: 20px;
+}
+
+#resume .container .education .education-box .activities ul li {
+  padding-bottom: 5px;
+  font-weight: 200;
 }
